argocd/_argocd/manifests/argocd-ingress.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: argocd
  namespace: argocd
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    nginx.ingress.kubernetes.io/auth-secret: nginx/basic-auth
    nginx.ingress.kubernetes.io/auth-type: basic
spec:
  ingressClassName: ngninx
  rules:
    - host: argocd.dixneuf19.me
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: argocd-server
                port:
                  number: 80
  tls:
    - hosts:
      - argocd.dixneuf19.me
      secretName: argocd-dixneuf19-me-tls
